--- a/TODO
+++ b/TODO
@@ -5,12 +5,9 @@ DEBUG memory leak
 DEBUG gestione server chiuso e riaperto e client rimasto aperto
 DEBUG snfprintf occorre fare free delle altre variabili?
 
-BUG crasha se la store nel dato ho degli spazi vuoti
-BUG crasha se il nome del file è molto lungo
-
+TODO gestione thread mutex return
 TODO gestione ritorno delle malloc
 TODO gestione segnali
 TODO scegliere quando fare return null su manage request
-TODO gestione chiusura server riporto allo stato precedente se ho operazioni non terminate(es potrei fare un'unica write per la store) terminazione tuttu i thread
+
 TODO cleanup_handler
-TODO aggiungere a t_client fd, opSucc e opFail
